--- a/public/assets/css/login.css
+++ b/public/assets/css/login.css
@@ -5,6 +5,13 @@
     margin: 0;
     padding: 0;
 }
+.flash {
+    border: 2px solid red;
+    background-color: red;
+    color: white;
+    padding: 10px;
+    margin-bottom: 20px;
+}
 body {
     font-family: Helvetica;
     font-size:13px;
